<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logoTim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTim"
        android:layout_marginTop="100dp"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/codigo_de_empleado"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_un_codigo_de_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@id/tvUser"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUser"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/pin"/>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/blue"
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="4"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:backgroundTint="@color/blue"
        android:enabled="false"
        android:id="@+id/btnInto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_enable"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/iniciar_sesion"/>

</androidx.constraintlayout.widget.ConstraintLayout>