...
            app:icon="@drawable/ic_person"
            app:iconGravity="end"
            android:background="@drawable/buttom"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salir"
        app:icon="@drawable/ic_baseline_exit_to_app_24"
        app:iconGravity="end"
        android:background="@drawable/buttom"
...
